Modernized: Java 21